food.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suryadeployment
  labels:
    app: application
spec:
  replicas: 3
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: mycont123
          image: surya8442/delicious-world
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: delicious
spec:
  selector:
    app: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
