insta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instadeploy
  labels:
    app: instaapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instaapp
  template:
    metadata:
      labels:
        app: instaapp
    spec:
      containers:
        - name: instacont
          image: surya8442/instagram:v1
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: insta
spec:
  selector:
    app: instaapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
