ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /food
            pathType: Prefix
            backend:
              service:
                name: delicious
                port:
                  number: 80

          - path: /travel
            pathType: Prefix
            backend:
              service:
                name: auto
                port:
                  number: 80

          - path: /devops
            pathType: Prefix
            backend:
              service:
                name: devops
                port:
                  number: 80

          - path: /insta
            pathType: Prefix
            backend:
              service:
                name: insta
                port:
                  number: 80   # ✅ FIXED
